# TOTP_Display

./: .gitmodules  CMakeLists.txt  custom_linker_script.ld  main.c
Fonts/: sono_30p.xcf  sono_50p.xcf
board/: totp_display.h
fatfs/: ffconf.h
hardware/: dcf.c  dcf.h  hardware.c  hardware.h  lcd.c  lcd.h  rtc.c  rtc.h
system/: fat.c  shell.c  shell_commands.c  totp.c  totp.h
system/ui/: bmp.c  bmp.h  font.c  font.h
usb/: flash_functions.c  msc_disk.c  msc_disk.h  usb_callbacks.c  usb_descriptors.c
